GERONIMO-3975 PlanCreator fails to deploy an application when Geronimo is installed into a directory with white space. Thanks to Yun Feng Ma for the patch.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/branches/2.1@669130 13f79535-47bb-0310-9956-ffa450edef68